--- a/myblog/static/src/scss/style.scss
+++ b/myblog/static/src/scss/style.scss
@@ -661,7 +661,7 @@ and (max-width : 480px) {
     }
     picture {
         width: 30%;
-        height: 150px;
+        height: 100%;
         float: right;
     }
     img {
