--- a/myblog/templates/blog/post_list.html
+++ b/myblog/templates/blog/post_list.html
@@ -32,6 +32,7 @@
           <footer>
           <span class="icon-heart"></span>
           <data>{{ post.likes }}</data>
+          </footer>
         </header>
         <picture>
           <div class="placeholder" data-large="{{ post.image.url }}">
