--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" type="image/png" href="{% static 'image/background/favicon_logo.png' %}">
     {% block title %}
-    <title>Sujin Lee - A Creative Developer</title>
+    <title>Sujin Lee - Creative Developer</title>
     {% endblock %}
     <!-- meta tags -->
     <meta property="fb:app_id" content="1081681621896558" />
