--- a/myblog/templates/blog/post_list.html
+++ b/myblog/templates/blog/post_list.html
@@ -50,7 +50,7 @@
   {% endif %}
 </div>
   {% if user.is_authenticated %}
-  <a href="{% url 'post_new' %}"><button class="btn_write material-icons">create</button></a>
+  <a href="{% url 'post_new' %}"><button class="btn_write material-icons">add</button></a>
   {% endif %}
 {% endblock content %}
 
