--- a/myblog/templates/blog/post_edit.html
+++ b/myblog/templates/blog/post_edit.html
@@ -54,7 +54,7 @@
     </div>
   
   </div>
-
+  <div class="message"></div>
   <button class="btn_gototop material-icons">keyboard_arrow_up</button>
 {% endblock %}
 
