--- a/myblog/templates/blog/post_edit.html
+++ b/myblog/templates/blog/post_edit.html
@@ -44,7 +44,7 @@
 
      {{ form.body }}
      
-     {{ form.tag }}
+     <div class="tags_field">{{ form.tag }}</div>
      {% if form.errors %}
      {% endif %}
      {{ form.errors.slug }}
