--- a/myblog/static/src/scss/form.scss
+++ b/myblog/static/src/scss/form.scss
@@ -52,6 +52,7 @@ input[type='date'], input[type='time'] {
     width: 100%;
   }
   header {
+    z-index: 9;
     display: flex;
     justify-content: space-between;
     padding: $page_margin;
@@ -80,10 +81,6 @@ input[type='date'], input[type='time'] {
 
 input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
   background: transparent;
-}
-
-.form_field {
-  padding-top: $page_margin * 2;
 }
 
 // input::-moz-placeholder, textarea::-moz-placeholder {
@@ -169,6 +166,8 @@ input#id_tag {
     color: $theme-col;
 }
 
+
+
 textarea {
   width: 100%;
   padding: 15px;
@@ -229,7 +228,7 @@ select:-webkit-autofill:focus {
 input, textarea {
   width: 100%;
   border: 0;
-      border-top: 1px solid $light-gray-hover;
+  border-bottom: 1px solid $light-gray-hover;
 }
 #id_title {
   font-size: 2rem;
@@ -310,4 +309,35 @@ option {
 @keyframes fadeout {
     from {bottom: 30px; opacity: 1;}
     to {bottom: 0; opacity: 0;}
+}
+
+
+.form_field {
+  padding-top: $page_margin * 2;
+}
+
+#id_tag {
+  width: 30%;
+  border: none;
+}
+.tags_field{
+  display: inline-flex;
+  width: 100%;
+}
+
+.tag-group {
+  display: flex;
+  height: 50%;
+  
+  .tag {
+    padding: 0.5rem;
+    margin: 0.5rem 0.5rem 0.5rem 0;
+
+    &:after{
+      font-family: 'Material Icons';
+      content: '\E5CD';
+      vertical-align: middle;
+      padding-left: 0.5rem;
+    }
+  }
 }
