--- a/myblog/static/src/scss/text.scss
+++ b/myblog/static/src/scss/text.scss
@@ -44,7 +44,7 @@ html {
 }
 body {
     -webkit-font-smoothing: antialiased;
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Poppins','NanumSquare', sans-serif;
     color: $black;
     word-wrap: break-word;
     display: flex;
