--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -12,6 +12,11 @@
 <meta property="og:description" content="{{ post.summary|truncatechars:230 }}" />
 <meta property="og:image" content="http://www.sujinlee.me/{{ post.image.url }}" />
 <meta property="og:url" content="http://www.sujinlee.me/blog/{{post.slug }}/" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css">
+{% block stylesheet %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/contrib/auto-render.min.js"></script>
+{% endblock %}
 {% endblock %}
 
 {% block content %}
@@ -20,7 +25,7 @@
   <h1>BLOG</h1>
 </header>
 
-<article>
+<article onload="katexRender()">
   <picture>
     <div class="placeholder" data-large="{{ post.image.url }}">
       <img src="{{ post.image_thumbnail.url }}" class="mainPostImg img-small">
@@ -113,8 +118,22 @@
 {% block jsblock %}
 <script src="{% static 'src/js/highlight.pack.js' %}"></script>
 <script src="{% static 'src/js/post_detail.js' %}"></script>
-<script>hljs.initHighlightingOnLoad();
+
+<script>
+hljs.initHighlightingOnLoad();
         window.onload = loadPreImage();
+        renderMathInElement(
+          document.body,
+          {
+              delimiters: [
+                  {left: "$$", right: "$$", display: true},
+                  {left: "\\[", right: "\\]", display: true},
+                  {left: "$", right: "$", display: false},
+                  {left: "\\(", right: "\\)", display: false}
+              ]
+          }
+      );
+
 </script>
 {% endblock %}
 
