--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -59,7 +59,7 @@
         </div>
         <span class="like_count">{{ project.likes }}</span>
       </li>
-      <li><span class="icon-bubble"></span><a href="{% url 'project_detail' slug=project.slug %}#disqus_thread"></a></li>
+      <!-- <li><span class="icon-bubble"></span><a href="{% url 'project_detail' slug=project.slug %}#disqus_thread"></a></li> -->
     </ul>
     <ul>
       <a class="facebook btn_share"
