--- a/myblog/templates/blog/post_list.html
+++ b/myblog/templates/blog/post_list.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block ogtags %}
-<meta property="og:type" content="Sujin Lee:Post" />
+<meta property="og:type"   content="website" />
 <meta property="og:title" content="Blog - Sujin Lee" />
 <meta property="og:description" content="Creative Developer" />
 <meta property="og:image" content="http://www.sujinlee.me/image/background/profile-about.png" />
@@ -25,13 +25,13 @@
     {% for post in posts %}
       <li class="blog_ele" onclick="location.href='{% url 'post_detail' slug=post.slug %}';">
         <header>
-          <span class="date">{{ post.published_date }}</span>
           <div class="detail">
             <div class="blog_title">
+              <span class="date">{{ post.published_date }}</span>                
               <h2>{{ post.title|truncatechars:48 }}</h2>
               <h3>{{ post.summary|truncatechars:60 }}</h3> 
             </div>           
-            <button class="btn_read material-icons">arrow_forward</button>
+            <!-- <button class="btn_read material-icons">arrow_forward</button> -->
           </div>
           <footer>
           <span class="icon-heart"></span>
