--- a/myblog/templates/blog/index.html
+++ b/myblog/templates/blog/index.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block ogtags %}
-<meta property="og:type" content="Sujin Lee:Post" />
+<meta property="og:type"   content="website" /> 
 <meta property="og:title" content="Sujin Lee | Creative Developer" />
 <meta property="og:description" content="Personal Website" />
 <meta property="og:image" content="http://www.sujinlee.me/image/background/profile-about.png" />
