--- a/myblog/templates/blog/post_edit.html
+++ b/myblog/templates/blog/post_edit.html
@@ -5,7 +5,7 @@
 <title>Write New Post - Sujin Lee</title>
 {% endblock %}
 {% block ogtags %}
-<meta property="og:type" content="Sujin Lee:Post" />
+<meta property="og:type"   content="website" /> 
 <meta property="og:title" content="New Post" />
 <meta property="og:description" content="{{ post.summary|truncatechars:230 }}" />
 <meta property="og:image" content="http://www.sujinlee.me/{{ post.image.url }}" />
