--- a/myblog/templates/blog/tagging_post_list.html
+++ b/myblog/templates/blog/tagging_post_list.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block ogtags %}
-<meta property="og:type" content="Sujin Lee:Post" />
+<meta property="og:type"   content="website" /> 
 <meta property="og:title" content="{{ tag.name }} - Sujin Lee" />
 <meta property="og:description" content="Creative Developer" />
 <meta property="og:image" content="http://www.sujinlee.me/image/background/profile-about.png" />
